Update Netlify config to publish all directories

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   base = "/"
-  publish = "website"
+  publish = "."
   command = "echo 'No build required'"
 
 # CORS headers for the client dashboard
